--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,3 @@
 sources:
-  dovecot-2.3-pigeonhole-0.5.21.tar.gz: e0707a46cb9e1342a74cb03803430f9198608e5e
-  dovecot-2.3.21.1.tar.gz: 430f55c0cbc4b9e551d15fc77a9b4d766bfbb909
-  dovecot-2.3.21.1.tar.gz.sig: ade83fd7d1e5056c206d4ba425993e125ac97cb8
+  dovecot-2.4.1-4.tar.gz: 57d636590614e788cbf6ab4e8b0620a43c88e6a3
+  dovecot-pigeonhole-2.4.1-4.tar.gz: a5b1bba1ad1503204b875bec2d6b2f998d5ffc73
